# ivcmp

./: .epc_conf  .flake8  .hgignore  CMakeLists.txt  INSTALL  ivcmp.c  ivcmp.h  ivcmp_maxdev.c  ivcmp_maxdev.h  main.c  readme.md
.github/workflows/: lint.yaml  tests.yaml
advanced_tests/: iv_compare.py  readme.txt  test_compare.py
advanced_tests/test_data/: elements (10).json  elements (11).json  elements (14).json  elements (17).json  elements (18).json  elements (19).json  elements (20).json  elements (22).json  elements (23).json  elements (24).json  elements (25).json  elements (26).json  elements (27).json  elements (28).json  elements (29).json  elements (30).json  elements (31).json  elements (34).json  elements (35).json  elements (36).json  elements (37).json  elements (38).json  elements (39).json  elements (40).json  elements (7).json  elements (8).json  elements (9).json
doc/: Signature_comparison_algorithm_EyePoint.md  ivcurve_comparison_algorithm_for_eyepoint.md
pyivcmp/: ivcmp.py  readme.md  requirements-dev.txt  test_libivcmp.py
pyivcmp/tests/: test_libivcmp.py
python/: ivcmp.py  ivcmp_maxdev.py  libivcmp.py  readme.md  test_libivcmp.py  test_libivcmp_maxdev.py
src/: ivcmp.c  ivcmp.h  ivcmp_maxdev.c  main.c
tests/: test_libivcmp.py  test_libivcmp_maxdev.py
utils/: plot_debug_data.py
